# alacritty

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  Makefile  README.md  TODO.md  dprint.jsonc
.builds/: freebsd.yml
.cargo/: config.toml
.github/workflows/: upload_asset.sh
alacritty_config/: Cargo.toml
alacritty_config_derive/: Cargo.toml
alacritty_terminal/: Cargo.toml
alacritty_terminal/src/: selection.rs
alacritty_terminal/src/tty/: mod.rs
commandspace/: Cargo.toml
commandspace/.cargo/: config.toml
commandspace/res/: bg.f.glsl  bg.v.glsl
commandspace/src/: cli.rs  config_monitor.rs  daemon.rs  event.rs  global_hotkey.rs  global_tray.rs  lib.rs  logging.rs  main.rs  paths.rs  rdev.rs  tray.rs  utils.rs  window_context.rs
commandspace/src/cli/: config.rs  mod.rs
commandspace/src/config/: action.rs  bell.rs  bg.rs  bindings.rs  font.rs  general.rs  global_bindings.rs  hint.rs  mod.rs  scrolling.rs  selection.rs  serde_utils.rs  terminal.rs  types.rs  ui_config.rs  window.rs
commandspace/src/display/: color.rs  content.rs  hint.rs  mod.rs  window.rs
commandspace/src/fzl/: mod.rs
commandspace/src/input/: mod.rs
commandspace/src/renderer/: bg.rs  mod.rs  rects.rs
commandspace/src/renderer/text/: builtin_font.rs  glyph_cache.rs
commandspace_config/: Cargo.toml
commandspace_config/src/: action.rs  color.rs  configs.rs  cursor.rs  debug.rs  font.rs  global_bindings.rs  hint.rs  lib.rs  mouse.rs  paths.rs  rgb.rs  serde_utils.rs  terminal.rs  window.rs
docs/: escape_support.md
extra/osx/Alacritty.app/Contents/: Info.plist
scripts/: README.md  colors.sh  create-flamegraph.sh
