[workspace]
  members = [
    "alacritty_terminal",
    "commandspace",
    "commandspace_config",
  ]
  resolver = "2"

[workspace.package]
  edition      = "2024"
  rust-version = "1.85.0"

[profile.release]
  lto         = "thin"
  debug       = 1
  incremental = false

[workspace.dependencies]
  toml      = "0.9.2"
  toml_edit = "0.23.1"
  #
  bitflags       = "2.11.0"
  crossfont      = "0.9.0"
  keyboard-types = "0.7.0"
  unicode-width  = "0.2.0"
  # other shared crates:

[patch.crates-io]
  crossfont = { path = "../crossfont" }
  # freetype-rs = { version = "0.38.0" }
