[package]
name = "alacritty_config"
version = "0.2.4-dev"
authors = ["Christian Duerr <contact@christianduerr.com>"]
edition.workspace = true
homepage = "https://alacritty.org"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alacritty/alacritty"
rust-version.workspace = true
description = "Alacritty configuration abstractions"

[dependencies]
log = { version = "0.4.17", features = ["serde"] }
serde = "1.0.163"
toml.workspace = true

[dev-dependencies]
alacritty_config_derive = { version = "0.2.6-dev", path = "../alacritty_config_derive" }
serde = { version = "1.0.163", features = ["derive"] }
