[package]
name = "alacritty_config_derive"
version = "0.2.6-dev"
authors = ["Christian Duerr <contact@christianduerr.com>"]
edition.workspace = true
homepage = "https://alacritty.org"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alacritty/alacritty"
rust-version.workspace = true
description = "Failure resistant deserialization derive"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.7"
syn = { version = "2.0.16", features = ["derive", "parsing", "proc-macro", "printing"], default-features = false }

[dev-dependencies.alacritty_config]
path = "../alacritty_config"
version = "0.2.4-dev"

[dev-dependencies]
log = "0.4.11"
serde = { version = "1.0.117", features = ["derive"] }
toml.workspace = true
