[package]
    name                   = "commandspace_config"
    version                = "0.1.0"
    authors                = [ "Squirreljetpack <squirreljetpacks@gmail.com>" ]
    edition.workspace      = true
    rust-version.workspace = true
    license                = "Apache-2.0"
    description            = "Configuration types for commandspace"

[dependencies.alacritty_terminal]
    path    = "../alacritty_terminal"
    version = "0.25.2-dev"

[dependencies]
    bitflags.workspace       = true
    crossfont.workspace      = true
    keyboard-types.workspace = true

    log            = { version = "0.4", features = [ "std", "serde" ] }
    serde          = { version = "1", features = [ "derive" ] }
    toml.workspace = true


    # todo: get rid of these by moving winit stuff out
    unicode-width.workspace = true
    winit                   = { version = "=0.31.0-beta.2", default-features = false, features = [ "serde" ] }
