[package]
    name                   = "commandspace_config"
    version                = "0.1.0"
    authors                = [ "Squirreljetpack <squirreljetpacks@gmail.com>" ]
    edition.workspace      = true
    rust-version.workspace = true
    license                = "Apache-2.0"
    description            = "Configuration types for commandspace"

[dependencies.alacritty_terminal]
    path    = "../alacritty_terminal"
    version = "0.25.2-dev"

[dependencies]
    bitflags.workspace       = true
    crossfont.workspace      = true
    keyboard-types.workspace = true

    log            = { version = "0.4", features = [ "std", "serde" ] }
    serde          = { version = "1", features = [ "derive" ] }
    toml.workspace = true

    # paths
    cli_boilerplate_automation = "0"
    dirs                       = "6.0.0"
    which                      = "8.0.0"

    # todo: get rid of these by moving winit stuff out
    unicode-width.workspace = true
    winit                   = { version = "=0.31.0-beta.2", default-features = false, features = [ "serde", "wayland", "x11", "wayland-dlopen" ] }
    strum_macros            = "0.28.0"
    strum                   = { version = "0.28.0", features = [ "strum_macros" ] }

[dependencies.clipboard_logger]
    path    = "../../clipboard_logger"
    version = "0"
